# prpl-uruki

./: .hgignore  AUTHORS  ChangeLog  Makefile.am  autogen.sh  config.h.in  configure.ac
pixmaps/: Makefile.am
src/: Makefile.am  kiAuthClient.cpp  kiAuthClient.h  kiClient.cpp  kiClient.h  kiClient_cb.cpp  kiDefines.h  kiFileClient.cpp  kiFileClient.h  kiGateClient.cpp  kiGateClient.h  kiHeaders.h  kiPurple.cpp  kiPurple.h  kiUtils.cpp  kiUtils.h  liburuki.cpp
