EXTRA_DIST = \
	protocols/16/uruki.png \
	protocols/22/uruki.png \
	protocols/48/uruki.png \
	protocols/scalable/uruki.svg

pidgin_protocol_pix16dir = $(datadir)/pixmaps/pidgin/protocols/16
pidgin_protocol_pix22dir = $(datadir)/pixmaps/pidgin/protocols/22
pidgin_protocol_pix48dir = $(datadir)/pixmaps/pidgin/protocols/48
pidgin_protocol_pixscaldir = $(datadir)/pixmaps/pidgin/protocols/scalable

pidgin_protocol_pix16_DATA = protocols/16/uruki.png
pidgin_protocol_pix22_DATA = protocols/22/uruki.png
pidgin_protocol_pix48_DATA = protocols/48/uruki.png
pidgin_protocol_pixscal_DATA = protocols/scalable/uruki.svg
